# hadron

./: .gitignore  Cargo.toml  SConstruct  com.rutins.Hadron.json  hadron.cpp  hadron.nimble  imgui.ini  meson.build
data/: com.rutins.Hadron.appdata.xml.in  com.rutins.Hadron.desktop.in  com.rutins.Hadron.gschema.xml  meson.build
data/icons/: meson.build
demo/: icon.svg.import  main.tscn  project.godot
demo/icons/: explorer.svg.import
po/: POTFILES  meson.build
src/: application.vala  buffer.gs  explorer.cpp  explorer.h  hadron-application.c  hadron-application.h  hadron-window.blp  hadron-window.c  hadron-window.h  hadron-window.ui  hadron.gresource.xml  hadron.nim  main.c  main.rs  main.vala  meson.build  panel.cpp  panel.h  register_types.cpp  register_types.h  window.gs  window.ui  window.vala  workbench.cpp  workbench.h
src/hadronpkg/: submodule.nim
src/panels/: explorer.rs  mod.rs  search.rs
src/res/: app.css
subprojects/imgui-1.89.3/: .meson-subproject-wrap-hash.txt
tests/: test1.nim
